2001-12-17  Sam Steingold  <sds@gnu.org>

	* predtype.d (expand_deftype): check that (CAR TYPE-SPEC) is a
	symbol before calling GET

2001-12-12  Sam Steingold  <sds@gnu.org>

	simplify pathname directory lists
	* pathname.d (subst_coerce_normal_ss, subst_up_dotdot): folded
	into simplify_directory()
	(simplify_directory): new function: coerce to normal simple
	strings, replace ".." with :UP and collapse "foo/../"
	(parse_logical_pathnamestring, PARSE-NAMESTRING, merge_dirs): call it
	(subdir_namestring_parts): handle :UP
	(directory_list_valid_p): extracted from MAKE-PATHNAME
	(MAKE-PATHNAME): call simplify_directory() and
	directory_list_valid_p();
	Also: reverted the 2001-08-29 change: do NOT return a logical
	pathname when defaults is logical, but `logical' is false

2001-12-11  Sam Steingold  <sds@gnu.org>

	* socket.d (socket_getlocalname): when not resolving, init
	truename to a zero-length string
	Reported by Ian Wild <ian_wild@yahoo.com>

2001-11-29  Sam Steingold  <sds@gnu.org>

	* configure (link): remove the target ($2) first
	(maybe_mkdir): new function
	* makemake.in (echotab_mkdir_maybe): new function

2001-11-28  Sam Steingold  <sds@gnu.org>

	* configure, makemake.in, lndir: the idiom `cd $path; pwd` breaks
	down when cd prints something -- redirect its output to /dev/null
	From William Harold Newman <william.newman@airmail.net>

2001-11-28  Sam Steingold  <sds@gnu.org>

	* pathname.d (wild_char_p): new macro
	(PARSE-NAMESTRING, MAKE-PATHNAME, wild_p): use it

2001-11-28  Sam Steingold  <sds@gnu.org>

	* pathname.d (MAKE-PATHNAME): revert the 2001-07-20 patch: :case
	applies only to strings, not pathnames in the :default arg
	Reported by Kent M Pitman <pitman@world.std.com>

2001-11-27  Sam Steingold  <sds@gnu.org>

	* array.d (SIMPLE_FILL, SIMPLE_REVERSE, SIMPLE_NREVERSE): new macros
	(elt_fill): use SIMPLE_FILL
	(elt_reverse): use SIMPLE_REVERSE
	(elt_nreverse): use SIMPLE_NREVERSE

2001-11-27  Sam Steingold  <sds@gnu.org>
